discussion/kv_engine/153825/153825_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46360: Add AArch64 support for TaggedPtr

AArch64 has the same 48 bits of "real" pointer bits as x86-64. Prior
to this change we see a compile error on AArch64:

    ../kv_engine/engines/ep/src/item.h: In member function 'void Item::setData(const char*, size_t)':
    ../kv_engine/engines/ep/src/item.h:598:44: error: 'TaggedPtrBase' was not declared in this scope; did you mean 'TaggedPtr'?
      598 |         replaceValue(TaggedPtr<Blob>(data, TaggedPtrBase::NoTagValue));
          |                                            ^~~~~~~~~~~~~
          |                                            TaggedPtr

Change-Id: Icb118e428313230f3e295eb2417464f087de9e1d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-19 08:35:32.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-19 09:01:03.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35874/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0034/0157]: test access scanner settings.....\kv_engine\engines\ep\tests\ep_testsuite.cc:3351 Test failed: `" (Expected `0", got `-1" - Initial time incorrect, expect: 02:00, actual: 01:59)
(68 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35874/ )

Compile error at     ../kv_engine/engines/ep/src/item.h:598:44:
error: "TaggedPtrBase" was not declared in this scope; did you mean "TaggedPtr"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35874/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9010/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7562/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30664/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9633/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10704/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10964/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18516/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
